<resources>
    <string name="app_name">EmailApplication</string>
    <string name="send">Send</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_message">Enter Message</string>
</resources>